
@startuml MedicalDS_Relational
title Modelo Relacional — MedicalDS
skinparam backgroundColor #FAFAFA
skinparam entity {
  BackgroundColor<<main>> #E3F2FD
  BackgroundColor<<aux>> #FFF3E0
  BorderColor #1976D2
  FontSize 12
  FontColor #333
}
skinparam roundcorner 20
skinparam shadowing true

' Agrupación visual
package "Usuarios y Pacientes" {
  entity "users" as users <<main>> {
    *id : bigint
    username : varchar
    email : varchar
    password : varchar
    role : varchar <<enum:user,admin,visitor>>
    created_at : datetime
  }
  entity "patients" as patients <<main>> {
    *id : bigint
    first_name : varchar
    last_name : varchar
    dob : date
    gender : varchar
    contact_info : text
    user_id : bigint
  }
}

package "Atención Médica" {
  entity "appointments" as appointments <<main>> {
    *id : bigint
    patient_id : bigint
    user_id : bigint
    scheduled_at : datetime
    status : varchar
    notes : text
  }
  entity "records" as records <<main>> {
    *id : bigint
    patient_id : bigint
    appointment_id : bigint
    notes : text
    created_at : datetime
    created_by : bigint
  }
  entity "prescriptions" as prescriptions <<main>> {
    *id : bigint
    record_id : bigint
    appointment_id : bigint
    patient_id : bigint
    prescribed_by : bigint
    medication : varchar
    dosage : varchar
    instructions : text
    issued_at : datetime
  }
}

package "Casos y Diagnósticos" {
  entity "clinical_cases" as clinical_cases <<main>> {
    *id : bigint
    patient_id : bigint
    title : varchar
    description : text
    created_at : datetime
    created_by : bigint
  }
  entity "diagnostics" as diagnostics <<main>> {
    *id : bigint
    clinical_case_id : bigint
    name : varchar
    description : text
    date : date
    performed_by : bigint
  }
  entity "general_diagnostics" as general_diagnostics <<main>> {
    *id : bigint
    patient_id : bigint
    name : varchar
    description : text
    date : date
    user_id : bigint
  }
}

package "Síntomas" {
  entity "symptoms" as symptoms <<aux>> {
    *id : bigint
    name : varchar
    description : text
  }
  entity "clinical_case_symptoms" as clinical_case_symptoms <<aux>> {
    *clinical_case_id : bigint
    *symptom_id : bigint
  }
}

' Relaciones principales
users ||--o{ patients : "cuida"
users ||--o{ appointments : "atiende"
users ||--o{ records : "autor"
users ||--o{ prescriptions : "prescribe"

patients ||--o{ appointments : "agenda"
patients ||--o{ clinical_cases : "casos"
patients ||--o{ general_diagnostics : "diagnósticos generales"
patients ||--o{ records : "registros"
patients ||--o{ prescriptions : "recetas"

appointments ||--o{ records : "registra"
appointments ||--o{ prescriptions : "receta"

clinical_cases ||--o{ diagnostics : "diagnósticos"
clinical_cases ||--o{ clinical_case_symptoms : "síntomas"
symptoms ||--o{ clinical_case_symptoms : "asociado"

diagnostics }o--|| clinical_cases : "caso clínico"
general_diagnostics }o--|| patients : "paciente"
records }o--|| patients : "paciente"
records }o--|| appointments : "cita"
prescriptions }o--|| records : "registro"
prescriptions }o--|| appointments : "cita"

' Separadores visuales
/'
  Usuarios y Pacientes
  Atención Médica
  Casos y Diagnósticos
  Síntomas
'/

@enduml

